Vendor CSS normal css

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 	<!-- Title tag -->	
     <title></title>
 
-    <!-- Style sheets -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+    <!-- Vendor style sheets -->
+    <link rel="stylesheet" href="/assets/vendor-css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/vendor-css/font-awesome.min.css">
+
+    <!-- Non-vendor style sheets -->
+    <link rel="stylesheet" href="/assets/css/styles.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
